# csihu-app-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cab/: helpers.py  main.py  models.py  settings.py
