[tool.poetry]
name = "cab"
version = "0.2.0"
description = "FastAPI backend to periodically parse CSIHU announcements"
authors = ["atbuy <atbuy@atbuy.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
uvicorn = {extras = ["standard"], version = "0.32.0"}
pydantic-settings = "2.6.1"
requests = "2.32.3"
beautifulsoup4 = "4.12.3"
lxml = "5.3.0"
redis-om = "0.3.3"
selenium = "4.26.1"


[tool.poetry.group.dev.dependencies]
ruff = "0.7.3"
pre-commit = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
